--- a/static/main.css
+++ b/static/main.css
@@ -42,11 +42,69 @@ footer {
 	font-size: .8em;
 	background-color: #f8f8f8;
 	padding: 2em;
+	-webkit-border-radius: 6px;
+	        border-radius: 6px;
 }
 
 .sammy {
 	cursor: pointer;
 }
+
+.flip-container {
+  -webkit-perspective: 1000;
+  -moz-perspective: 1000;
+  -o-perspective: 1000;
+  perspective: 1000;
+}
+
+.flip-container, .front, .back {
+	width: 274px;
+	height: 374px;
+}
+
+.flipper {
+	-webkit-transition: 0.6s;
+	-webkit-transform-style: preserve-3d;
+
+	-moz-transition: 0.6s;
+	-moz-transform-style: preserve-3d;
+  
+  -o-transition: 0.6s;
+	-o-transform-style: preserve-3d;
+
+	transition: 0.6s;
+	transform-style: preserve-3d;
+
+	position: relative;
+}
+
+.front, .back {
+	-webkit-backface-visibility: hidden;
+	-moz-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
+	backface-visibility: hidden;
+
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+.front {
+	background: url(img/john.png) 0 0 no-repeat;
+	z-index: 2;
+}
+
+.back {
+	-webkit-transform: rotateY(180deg);
+	-moz-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
+	transform: rotateY(180deg);
+}
+
+
+
+
+
 
 /****************************
 		Resume
@@ -62,6 +120,11 @@ footer {
 .project-icon {
 	cursor: pointer;
 	
+}
+
+.project-icon img {
+	-webkit-border-radius: 6px;
+	        border-radius: 6px;
 }
 
 
