--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,7 @@
 
 {% block content %}
 <div class="row">
-	<div class="col-sm-2"></div>
-	<div class="col-sm-4">
+	<div class="col-sm-4 col-sm-offset-2">
 		<div class="flip-container center-block">
 			<div class="flipper">
 				<img src="{{ CONTENT_DICT['Images']['portrait'] }}" alt="John Simmons portrait" class="img-rounded front">
@@ -24,7 +23,6 @@
 			<b>Last listen:</b><em>&nbsp;&nbsp;{{ artist }} - {{ track }}</em>
 		</p>
 	</div>
-	<div class="col-sm-2"></div>
 </div>
 <script type="text/javascript">
 	// Sammy picture toggle
