--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-	<script type="text/javascript" src="static/bootstrap.min.js"></script>
+	<script type="text/javascript" src="/static/bootstrap.min.js/"></script>
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -15,10 +15,10 @@
 	  ga('send', 'pageview');
 
 	</script>	
-	<link rel="stylesheet" href="static/bootstrap.min.css">
+	<link rel="stylesheet" href="/static/bootstrap.min.css/" type='text/css'>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="static/main.css">
+	<link rel="stylesheet" href="/static/main.css/" type='text/css'>
 	<title>{{ CONTENT_DICT['name'] }}
 		{% for item in CONTENT_DICT['Navigation'] %}
 			{% if item[1] == request.path and item[1] != "/" %}
