--- a/templates/base.html
+++ b/templates/base.html
@@ -19,12 +19,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="/static/main.css/" type='text/css'>
-	<title>{{ CONTENT_DICT['name'] }}
-		{% for item in CONTENT_DICT['Navigation'] %}
-			{% if item[1] == request.path and item[1] != "/" %}
-			 	- {{ item[0] }}
-			 {% endif %}
-		{% endfor %}</title>
+	<title>{{ CONTENT_DICT['name'] }}{% for item in CONTENT_DICT['Navigation'] %}{% if item[1] == request.path and item[1] != "/" %} - {{ item[0] }}{% endif %}{% endfor %}</title>
 </head>
 <body>
 	<nav class="navbar navbar-default push-lg">
