--- a/templates/resume.html
+++ b/templates/resume.html
@@ -10,6 +10,7 @@
 		<p class='text-center res-head push-sm'><em>&mdash;Work&mdash;</em></p>
 	</div>
 </div>
+
 <div class="row">
 	<div class="col-sm-6 col-sm-offset-3">
 		{% for list in CONTENT_DICT['Resume'] %}
@@ -19,6 +20,7 @@
 		{% endfor %}
 	</div>
 </div>
+
 <div class="row">
 	<div class="col-sm-12">
 		<p class='text-center res-head push-sm'><em>&mdash;School&mdash;</em></p>
@@ -29,7 +31,7 @@
 		{% for list in CONTENT_DICT['Education'] %}
 			<strong><a href="{{ list[1] }}">{{ list[0] }}</a></strong> &mdash; <em>{{ list[2] }}</em>
 			<small><p>{{ list[3] }}</p></small>
-			<p>{{ list[4] }}</p>
+			<p class='push-sm'>{{ list[4] }}</p>
 		{% endfor %}
 	</div>
 </div>
