--- a/templates/projects.html
+++ b/templates/projects.html
@@ -16,4 +16,8 @@
 		</div>
 	</div>
 </div>
+<script type="text/javascript">
+	$('img[src="/static/img/pimusicdiagram.png"]').click(function(e) { e.preventDefault();});
+	$('img[src="/static/img/pimusicdiagram.png"]').css('cursor' , 'default')
+</script>
 {% endblock %}
