--- a/static/main.css
+++ b/static/main.css
@@ -126,6 +126,11 @@ footer {
 	cursor: pointer;
 }
 
+.caption {
+	font-weight: bold;
+	margin-top: 10px;
+}
+
 /****************************
 		Maker
 ****************************/
@@ -156,9 +161,10 @@ li.next:before {
 }
 
 .project-img {
-	border: 1px solid #000;
 	margin-top: 1em;
 	margin-bottom: 1em;
+	height: 100%;
+	width: 100%;
 }
 
 .mk-head {
