projects now single page

--- a/templates/base.html
+++ b/templates/base.html
@@ -61,7 +61,7 @@
 		{% block content %}
 		{% endblock %}
 		<footer>
-			<small><p class="text-center">{{ CONTENT_DICT['name'] }} &copy; 2016</p></small>
+			<small><p class="text-center">{{ CONTENT_DICT['name'] }} &copy; {{ CONTENT_DICT['year'] }}</p></small>
 		</footer>
 	</div>
 </body>
