--- a/static/main.css
+++ b/static/main.css
@@ -37,14 +37,6 @@ footer {
 	line-height: 1.65em;
 }
 
-.lastfm {
-	font-size: .8em;
-	background-color: #f8f8f8;
-	padding: 2em;
-	-webkit-border-radius: 6px;
-	        border-radius: 6px;
-}
-
 .sammy {
 	cursor: pointer;
 }
@@ -182,8 +174,8 @@ li.next:before {
 .project-img {
 	margin-top: 1em;
 	margin-bottom: 1em;
-	height: 100%;
-	width: 100%;
+	height: 50px;
+	width: 50px;
 	-webkit-box-shadow: 0px 0px 7px 2px rgba(167,167,167,1);
 	-moz-box-shadow: 0px 0px 7px 2px rgba(167,167,167,1);;
 	box-shadow: 0px 0px 7px 2px rgba(167,167,167,1);;
