--- a/templates/records.html
+++ b/templates/records.html
@@ -5,76 +5,31 @@
 <div class="row">
 	<div class="col-sm-8 col-sm-offset-2">
 		<h1 class="push-sm">Records</h1>
-		<table>
-			<thead>
-				<tr>
-					<th class="size">7 Inch</th>
-					<th></th>
-					<th></th>
-					<th></th>
-					<th colspan='all' class="count">{{ seveninches|length }}</th>
-				</tr>
-			</thead>
-			<tbody>
-			{%  for r in seveninches %}
-				<tr>
-					<td>{{ r['Artist'] }}</td>
-					<td>{{ r['Title'] }}</td>
-					<td>{{ r['Color'] }}</td>
-					<td>{{ r['Year'] }}</td>
-					<td class="notes">{{ r['Notes'] }}</td>
-				</tr>
-			{% endfor %}
-			</tbody>
-		</table>
-
-		<table>
-			<thead>
-				<tr>
-					<th class="size">10 Inch</th>
-					<th></th>
-					<th></th>
-					<th></th>
-					<th colspan='all' class="count">{{ teninches|length }}</th>
-				</tr>
-			</thead>
-			<tbody>
-			{%  for r in teninches %}
-				<tr>
-					<td>{{ r['Artist'] }}</td>
-					<td>{{ r['Title'] }}</td>
-					<td>{{ r['Color'] }}</td>
-					<td>{{ r['Year'] }}</td>
-					<td class="notes">{{ r['Notes'] }}</td>
-				</tr>
-			{% endfor %}
-			</tbody>
-		</table>
-
-		<table>
-			<thead>
-				<tr>
-					<th class="size">12 Inch</th>
-					<th></th>
-					<th></th>
-					<th></th>
-					<th colspan='all' class="count">{{ twelveinches|length }}</th>
-				</tr>
-			</thead>
-			<tbody>
-			{%  for r in twelveinches %}
-				<tr>
-					<td>{{ r['Artist'] }}</td>
-					<td>{{ r['Title'] }}</td>
-					<td>{{ r['Color'] }}</td>
-					<td>{{ r['Year'] }}</td>
-					<td class="notes">{{ r['Notes'] }}</td>
-				</tr>
-			{% endfor %}
-			</tbody>
-		</table>
 		
-
+		{% for key, value in records.items() %}
+		<table>
+			<thead>
+				<tr>
+					<th class="size">{{ value[0][-1] }} Inch</th>
+					<th></th>
+					<th></th>
+					<th></th>
+					<th colspan='all' class="count">{{ value|length }}</th>
+				</tr>
+			</thead>
+			<tbody>
+			{%  for lst in value %}
+				<tr>
+					<td>{{ lst[0] }}</td>
+					<td>{{ lst[1] }}</td>
+					<td>{{ lst[2] }}</td>
+					<td>{{ lst[3] }}</td>
+					<td class="notes">{{ lst[4] }}</td>
+				</tr>
+			{% endfor %}
+			</tbody>
+		</table>
+		{% endfor %}
 
 	</div>
 </div>
