--- a/templates/macros/_renderpost.html
+++ b/templates/macros/_renderpost.html
@@ -21,7 +21,13 @@
 		{% endif %}	
 
 		<!-- Content -->
-		<p>{{post[2]|safe}}</p>
+		{% if session["logged_in"] == True %}
+			<p>ID: {{ post[0] }}</p>
+			<p style="color:red;"><strong><a href="/deletepost/{{ post[0] }}">Delete</a></strong></p>
+			<p style="color:gray;"><em>{{post[2]|safe}}</em></p>
+		{% else %}
+			<p>{{post[2]|safe}}</p>
+		{% endif %}
 
 		<!-- Images -->
 		{% for k,v in IMAGES.items() %}
