--- a/templates/records.html
+++ b/templates/records.html
@@ -2,6 +2,10 @@
 
 
 {% block content %}
+
+{% if session['logged_in'] == True %}
+	<p style="color:green;"><strong>Logged in</strong></p>	
+{% endif %}
 <div class="row">
 	<div class="col-sm-8 col-sm-offset-2">
 		<h1 class="push-sm">Records</h1>
@@ -14,7 +18,7 @@
 		{% endwith %}
 		<div id="plus"><p>+</p></div>
 	 	<div id="addform">
-		 	{% from "_renderfield.html" import render_field %}
+		 	{% from "macros/_renderfield.html" import render_field %}
 			<form method='POST' action="/records" class=''>
 						<dl>
 							{{ AddRecord.csrf_token }}
@@ -69,6 +73,9 @@
 					<td>{{ lst[3] }}</td>
 					<td>{{ lst[4] }}</td>
 					<td class="notes">{{ lst[5] }}</td>
+					{% if session["logged_in"] == True %}
+						<td><a href="/deleterecord/{{ lst[0] }}">Delete</a></td>
+					{% endif %}
 				</tr>
 			{% endfor %}
 			</tbody>
